# compi

./: .gitignore  ChangeLog.md  compiler.cabal  package.yaml
app/: Main.hs
src/: Lexer.hs  Lib.hs  Parser.hs  Syntax.hs
