name:                 compiler
version:              0.1.0.0
synopsis:             Compiler for Übersetzerbau
-- description:
-- license:
-- license-file:
homepage:
author:               Sebastian Steiner
maintainer:           e11777731@student.tuwien.ac.at
category:             Development
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable compiler
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
